Add group skeleton files

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,7 @@
                 "-g",
                 "${file}",
                 "Sales.c",
+                "Group.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
