--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "-g",
                 "${file}",
                 "Sales.c",
-                "Group.c",
+                "GroupMonthByRevenue.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
