add group product by revenue functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "${file}",
                 "Sales.c",
                 "GroupMonthByRevenue.c",
+                "GroupProductByRevenue.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
