Add everything related to grouping under GroupUtil.\nAdd answer to BQ1 functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,8 @@
                 "Sales.c",
                 "GroupMonthByRevenue.c",
                 "GroupProductByRevenue.c",
+                "GroupCityByRevenue.c",
+                "GroupUtil.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
