--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cmake.configureOnOpen": false,
     "files.associations": {
-        "sales.h": "c"
+        "sales.h": "c",
+        "groupmonthbyrevenue.h": "c"
     }
 }
