Add output to file functionality to every bq

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "sales.h": "c",
         "groupmonthbyrevenue.h": "c",
         "grouputil.h": "c",
-        "groupcitybyrevenue.h": "c"
+        "groupcitybyrevenue.h": "c",
+        "groupsubcategorypermonthlyrevenue.h": "c"
     }
 }
